kubernetes/Cluster-Int-Temp/deployments/apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: apps
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.8.13
          volumeMounts:
            - name: pvc
              mountPath: /app/config
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: homepage
